Security + reliability hardening (PR 1-8 bundle)
PR 1 - Lock down the dashboard
  * Spring Security form login backed by DoctorUserDetailsService
  * BCrypt via DelegatingPasswordEncoder; legacy {noop} rows auto-upgrade on login
  * .anyRequest().authenticated() default; per-route ROLE_ADMIN / ROLE_REFERRING_DOCTOR
  * CORS pinned via CORS_ALLOWED_ORIGINS (was: *)
  * Secure / HttpOnly / SameSite=Lax cookies; HSTS + CSP headers
  * DataInitializer gated to dev profile only (was: every non-prod profile)
  * V4 migration prefixes existing plaintext passwords with {noop}

PR 2 - Webhook signature done correctly + observability
  * Single @RequestBody String rawBody (fixes the prior 'two @RequestBody' bug)
  * HMAC-SHA256 with constant-time MessageDigest.isEqual
  * Skip-on-empty-secret for dev convenience; required in prod
  * AdminTestController gated to @Profile('dev')
  * Referring-doctor add-patient now requires consent attestation checkbox + audit log
  * AsyncConfig with AsyncUncaughtExceptionHandler + Micrometer counters

PR 3 - IDOR (read paths) + upload validation
  * PatientAccessService: ADMIN sees all, REFERRING_DOCTOR sees own, tumor-board domains see board queue
  * Wired into viewPatient, viewProtocol, viewReport, allPatients
  * MediaValidator: MIME whitelist + magic-byte check + size cap
  * Upload validation called BEFORE storeFile in PatientIntakeService and AdminTestController

PR 4 - AWS hardening + log hygiene + dead config
  * S3 PutObject sets ServerSideEncryption.AES256
  * env.example + README steer toward IAM instance role (no static AWS keys)
  * Removed dead ENCRYPTION_KEY and JWT_SECRET (read by zero classes)
  * Stripped PHI from INFO logs: cancer stage, ESR, CRP, pain values, full phone numbers
  * ConversationService consent message no longer falsely claims data is encrypted
  * Removed format_sql

PR 5 - Write-path IDOR + N+1 + transactional bug
  * submitReview: clean redirect on missing review (was: 500 stack trace)
  * approveProtoc